# go2flutter

./: LICENSE  README.md  README_ZH.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jniLibs/arm64-v8a/: libgocoresdk.h
android/src/main/jniLibs/x86/: libgocoresdk.h
core/: Makefile  go.mod  main.go
core/dart_api_dl/: dart_api_dl.go
core/engine/global/: global.go
core/engine/model/: message.go  platform.go
core/engine/src/: handle_func.go
core/export/cgo/: main.go
core/export/web/: main.go
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/go_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugins.cmake
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: go.podspec
ios/libgocoresdk.xcframework/: Info.plist
lib/: native_library.dart
lib/src/: bindings.dart  native_interface.dart  native_universal.dart  native_web.dart  tools.dart  wasm_loader.dart
linux/: CMakeLists.txt
macos/: go.podspec  libgocoresdk.dylib
web/: libgocoresdk.wasm  plugin.js
windows/: CMakeLists.txt
windows/AMD64/: libgocoresdk.h
